Connect the MQTT broker to the Staff dashboard via Websocket ( add forwarding Port 9001 to mosquitto service)
Add entrypoint.sh to run MQTT consumer with web service.

Create a test script to simulate multiple vehicles GPS tracking in the Staff Dashboard.

Create a filter by vehicles in Staff Dashboard.

Modify Product submit form to fetch RFID Tags from MQTT.

--- a/TIM_DjProject/Dockerfile
+++ b/TIM_DjProject/Dockerfile
@@ -25,6 +25,9 @@ RUN pip install -r requirements.txt
 COPY . /code/
 COPY ./custom_jazzmin_templates/base.html /usr/local/lib/python3.12/site-packages/jazzmin/templates/admin/base.html
 
+# Copy your entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-# Run Django server by default
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Use it as entrypoint
+ENTRYPOINT ["/entrypoint.sh"]
