--- a/TIM_DjProject/mosquitto/mosquitto.conf
+++ b/TIM_DjProject/mosquitto/mosquitto.conf
@@ -5,3 +5,8 @@ allow_anonymous true
 
 # Listener on default MQTT port
 listener 1883
+protocol mqtt
+
+# WebSocket support
+listener 9001
+protocol websockets
